--- a/frogweb/froga/css/froga.css
+++ b/frogweb/froga/css/froga.css
@@ -213,6 +213,55 @@ div.froga {
             }
 
 
+.frogaTdUpStreet {
+    width: 8%;
+    /* min-width: 36pt; */
+    height: 6%;
+    min-height: 27pt;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    border-spacing: 0px;
+    border-width: 0px;
+    background-repeat: no-repeat; 
+    /* background-image: none; */
+    background-image: "img/street1t.png";
+    background-size: 100% 100%;
+    background-color: #f0d3d3;
+}
+
+.frogaTdDownStreet {
+    width: 8%;
+    /* min-width: 36pt; */
+    height: 6%;
+    min-height: 27pt;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    border-spacing: 0px;
+    border-width: 0px;
+    background-repeat: no-repeat;
+    background-image: "img/street1b.png";
+    background-size: 100% 100%;
+    background-color: #f0d3d3;    
+}
+
+.frogaTdStartMeadow {
+    width: 8%;
+    /* min-width: 36pt; */
+    height: 6%;
+    min-height: 27pt;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    border-spacing: 0px;
+    border-width: 0px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    /* background-image: none; */
+    background-color: #f0d3d3;
+    visibility: visible;    
+}
+
+
+
     div.froga.img {
         width: 8%;
         min-width: 36pt;
